--- a/src/Pages/home/home.css
+++ b/src/Pages/home/home.css
@@ -23,8 +23,8 @@ body {
     border: 1px solid #1f2223;
     background-color: #222627;
     border-radius: 12px;
-    width: 65%;
-    height: 80%;
+    width: 75%;
+    height: 90%;
     display: flex;
     overflow: hidden;
 }
@@ -35,7 +35,7 @@ body {
 /* Navbar */
 .sidebar {
     flex: 1;
-    border-right: 1px solid #016c6f;
+    border-right: 2px solid #1f2223;
     background-color: #222627;
 }
 
@@ -52,6 +52,7 @@ body {
     display: flex;
     gap: 10px;
     font-weight: bold;
+    font-size: 16px;
     align-items: center;
 }
 
@@ -62,37 +63,116 @@ body {
 }
 
 .profileimg {
-    height: 25px;
-    width: 25px;
+    height: 28px;
+    width: 28px;
     border-radius: 50%;
     object-fit: cover;
 }
 
 .logout {
-    background-color: #222627;
-    color: #016c6f;
-    border: none;
+    background-color: #016c6f;
+    color: #ffffff;
+    border: 2px solid #1f2223;
     border-radius: 5px;
     cursor: pointer;
+    outline: none;
 }
 
+.logout:hover {
+    background-color: #1f2223;
+    color: #016c6f;
+    border: 2px solid #016c6f;
+    border-radius: 5px;
+    cursor: pointer;
+    outline: none;
+}
 
 /* Search */
 
-.search {
-    border-bottom: 2px solid #1f2223;
+.searchForm input {
+    padding: 0;
+    height: 10px;
+    text-align: center;
+    width: 100%;
+    background-color: transparent;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    color: white;
+    outline: none;
+    height: 40px;
+    font-size: 17px;
+    color: #31b5a7;
+    border-bottom: 1px solid #016c6f;
 }
 
-/* .searchForm {
+.userChat {
+    height: 55px;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    color: #31b5a7;
+    font-weight: bold;
+    cursor: pointer;
+}
 
-} */
+.userChat:hover,
+select {
+    background-color: #016c6f;
+    color: #ffffff;
+}
 
 .userChatImg {
     width: 50px;
     height: 50px;
     border-radius: 50%;
+    object-fit: cover;
 }
+
+/* Chats */
+
+.userChatInfo {
+    margin-top: 16px;
+}
+
+.userChatInfo span {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.userChatInfo p {
+    margin-top: 2px;
+    font-size: 14px;
+    font-weight: lighter;
+    color: lightgray;
+}
+
+
+/* Chat Page */
 
 .chat {
     flex: 2;
+}
+
+.chatInfo {
+    height: 60px;
+    display: flex;
+    align-items: center;
+    background-color: #016c6f;
+    justify-content: space-between;
+}
+
+.chatInfo img {
+    padding: 8px;
+    width: 26px;
+    height: 26px;
+    cursor: pointer;
+}
+
+.chatInfo span {
+    font-size: 22px;
+    margin-left: 330px;
+    font-family: 'Pacifico', cursive;
+    
 }
