--- a/src/Pages/home/home.css
+++ b/src/Pages/home/home.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto:wght@300&display=swap');
 
-
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
 body {
@@ -174,5 +173,140 @@ select {
     font-size: 22px;
     margin-left: 330px;
     font-family: 'Pacifico', cursive;
-    
+
+}
+
+/* Messages left*/
+
+.messages {
+    background: rgb(34, 38, 39);
+    background: linear-gradient(90deg, rgba(34, 38, 39, 1) 0%, rgba(1, 108, 111, 1) 100%);
+    padding: 10px;
+    height: calc(100% - 150px);
+    overflow: auto;
+    scroll-behavior: smooth;
+}
+
+.message {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 20px;
+}
+
+.msgInfo {
+    display: flex;
+    flex-direction: column;
+    font-weight: 300;
+    font-size: 12px;
+    color: gray;
+    gap: 5px;
+}
+
+.msgInfo img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.msgContent {
+    max-width: 80%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: flex-end;
+}
+
+.msgContent p {
+    background-color: #016c6f;
+    padding: 10px 20px;
+    border-radius: 0px 10px 10px 10px;
+    max-width: max-content;
+}
+
+.msgContent img {
+    width: 50%;
+}
+
+/* Messages right */
+
+
+.owner {
+    flex-direction: row-reverse;
+}
+
+.msgInfoOwn {
+    display: flex;
+    flex-direction: column;
+    font-weight: 300;
+    font-size: 12px;
+    color: white;
+    gap: 5px;
+}
+
+.msgInfoOwn img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.msgContentOwn {
+    max-width: 80%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: flex-end;
+}
+
+.msgContentOwn p {
+    background-color: #222627;
+    padding: 10px 20px;
+    border-radius: 10px 0px 10px 10px;
+    max-width: max-content;
+}
+
+.msgContentOwn img {
+    width: 50%;
+}
+
+
+.outerInput {
+    background: rgb(34, 38, 39);
+    background: linear-gradient(90deg, rgba(34, 38, 39, 1) 0%, rgba(1, 108, 111, 1) 100%);
+}
+
+.input {
+    height: 50px;
+    background-color: #36454F;
+    border-radius: 10px;
+    overflow: hidden;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.input input {
+    border: none;
+    outline: none;
+    width: 100%;
+    height: 50px;
+    border-radius: 10px;
+    background-color: #36454F;
+    font-size: 18px;
+    color: white;
+}
+
+.send {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.send img {
+    padding-right: 10px;
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
 }
