--- a/src/Pages/register/register.css
+++ b/src/Pages/register/register.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto:wght@300&display=swap');
 
-body{
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+
+body {
     margin: 0;
 }
 
@@ -35,6 +37,7 @@ body{
     font-weight: 800;
     color: #01cdcc;
     margin-bottom: 10px;
+    font-family: 'Pacifico', cursive;
 }
 
 .loginDesc {
@@ -93,4 +96,16 @@ body{
     font-size: 20px;
     font-weight: 500;
     cursor: pointer;
+}
+
+label {
+    display: flex;
+    align-items: center;
+}
+
+label img {
+    width: 24px;
+    height: 24px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
